[gd_scene load_steps=12 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://platformPack_tilesheet.png" type="Texture" id=3]
[ext_resource path="res://spike.tscn" type="PackedScene" id=4]
[ext_resource path="res://coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "platformPack_tilesheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "platformPack_tilesheet.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 962.25, 75 )

[node name="Level1" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, 164 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 131073, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 196609, 0, 0, 262145, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 327681, 0, 0, 393217, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 589842, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0 )

[node name="fallzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallzone"]
position = Vector2( 1013.75, 841 )
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="spikes" type="Node2D" parent="."]

[node name="spike" parent="spikes" instance=ExtResource( 4 )]
position = Vector2( 27, 186 )

[node name="spike2" parent="spikes" instance=ExtResource( 4 )]
position = Vector2( 845, -137 )

[node name="spike3" parent="spikes" instance=ExtResource( 4 )]
position = Vector2( 1107, -7 )

[node name="coins" type="Node2D" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 382, 119 )

[node name="coin2" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 1248, 375 )

[node name="coin3" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 723, -130 )

[node name="enemies" type="Node2D" parent="."]

[node name="enemy" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( 1259, 607 )
speed = 300
moveDist = 442

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_right = 1005.0
margin_bottom = 328.0

[connection signal="body_entered" from="fallzone" to="player" method="_on_fallzone_body_entered"]
[connection signal="body_entered" from="spikes/spike" to="player" method="_on_spike_body_entered"]
[connection signal="body_entered" from="spikes/spike2" to="player" method="_on_spike_body_entered"]
[connection signal="body_entered" from="spikes/spike3" to="player" method="_on_spike_body_entered"]
[connection signal="body_entered" from="coins/coin" to="player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coins/coin2" to="player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coins/coin3" to="player" method="_on_coin_body_entered"]
